log
Fri, Apr 18, 2025  8:09:43 PM: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  0|6
total_score: 0/70
eeef3b7
Sat, Apr 19, 2025  5:42:24 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
1979534
Sat, Apr 19, 2025  5:43:34 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
5a0f528
Sat, Apr 19, 2025  6:19:17 PM: 
 hashmap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  5|4
total_score: 30/70
6528103
Sat, Apr 19, 2025  6:38:48 PM: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  8|3
total_score: 40/70
50b7f40
Sat, Apr 19, 2025  6:42:39 PM: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  11|2
total_score: 50/70
6ac9afc
Sat, Apr 19, 2025  7:19:05 PM: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
ad351c5
Sat, Apr 19, 2025  7:20:48 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
834d0c9
Sat, Apr 19, 2025  7:22:31 PM: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  16|1
total_score: 60/70
7e3e9e9
Sat, Apr 19, 2025  7:29:50 PM: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:67:19: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     map->capacity = calloc(map->capacity , sizeof(Pair*)) ;
                   ^
cc1.exe: all warnings being treated as errors
ee0ccbb
Sat, Apr 19, 2025  7:30:45 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:67:19: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     map->capacity = (Pair**)calloc(map->capacity , sizeof(Pair*)) ;
                   ^
cc1.exe: all warnings being treated as errors
b02b2de
